# CarScan

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESUMEN_ESPAÑOL.md  docker-compose.yml  instructions.md  tucarrosource.html
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  vehicles.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  vehicle.py
backend/app/schemas/: __init__.py  vehicle.py
backend/app/scrapers/: __init__.py  base_scraper.py  bodegasylocales_scraper.py  fincaraiz_scraper.py  mercadolibre_scraper.py  tucarro_scraper.py  vendetunave_rust_scraper.py  vendetunave_scraper.py
backend/app/services/: __init__.py  vehicle_service.py
backend/app/workers/: __init__.py
docs/: API.md  HANDLING_403_ERRORS.md  SCRAPING.md  TESTING_SCRAPERS.md  TUCARRO_ANALYSIS.md  TUCARRO_INTEGRATION_SUMMARY.md  TUCARRO_QUICKSTART.md  TUCARRO_SCRAPER_REPORT.md  tucarro_scraper.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/components/: Icons.tsx  MapView.tsx
frontend/pages/: index.tsx
frontend/styles/: Home.module.css  globals.css
rust-scraper/: Cargo.toml
rust-scraper/src/: main.rs
