[package]
name = "vendetunave-scraper"
version = "0.1.0"
edition = "2024"
description = "Rust-based scraper for vendetunave.co vehicle listings"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
regex = "1.11.1"
